syntax = "proto3";

package pb;

import "pb/common.proto";

message CreateMachineReq {
    string image_id = 1;                // 用于构建镜像所使用的id
    string name = 2;                    // 容器名，为空时默认使用生成id作为名字
    repeated string env = 3;            // 环境变量
    bool tty = 4;                       // 是否启用tty
    repeated string cmd = 5;
    string working_dir = 6;
    map<string, PortBindings> exposed_ports = 7; // 端口映射
    Network network = 8;
    repeated MachineVolume volumes = 9;
    Resources resources = 10;
}

message PortBinding {
    string host_ip = 1;                      // 要监听的ip
    string host_port = 2;                    // 要监听的主机端口
}

message PortBindings {
    repeated PortBinding port_bindings = 1;
}

message CreateMachineResp {
    string id = 1;
    Error err = 2;
}

message DeleteMachineReq {
    string id = 1;
}

message ListMachineResp {
    repeated MachineInfo machine_infos = 1;
    Error err = 2;
}

message MachineInfo {
    string id = 1;
	string name = 2;
	string image_name = 3;
	string image_type = 4;
	string create_time = 5;
    string status = 6;
    string image_id = 7;
}

message StartMachineReq {
    string id = 1;
}

message MachineIdReq {
    string id = 1;
}

message KillMachineReq {
    string id = 1;
    string signal = 2;
}

message StopMachineReq {
    string id = 1;
    int32 timeout = 2;
}

message RenameMachineReq {
    string id = 1;
    string name = 2; // 新名字
}

message RestartMachineReq {
    string id = 1;
    int32 timeout = 2; // 为 kill container 设置的超时时间
}

message AttachStreamIn {
    string id = 1;
    bytes content = 2;
}

message AttachStreamOut {
    bytes content = 1;
}

message ResizeTTYReq {
    string id = 1;
    uint32 height = 2;
    uint32 width = 3;
}

message CanAttachJudgeResp {
    bool tty = 1;
    string state = 2;
    string image_type = 3;
}

message InspectMachineResp {
    string name = 1;
    string id = 2;
    string type = 3;
    string spec = 4;
    string runtime_config = 5;
}

message Network {
    string hostname = 1;                        // 主机名
    repeated HostEntry extra_hosts = 2;         // 额外的hosts
    // 额外的网络接口，无接口时则只有本地环回设备
    // 存在多个接口时则默认使用第一个接口作为网络默认出口
    repeated NetworkInterface interfaces = 3;
}

message HostEntry {
    string ip = 1;
    string host = 2;
}

message NetworkInterface {
    string name = 1;                        // 容器内veth的名字
    string bridge = 2;                      // 该veth需要接入的网桥名
    string mac = 3;                         // mac地址，可以为空
    string gateway = 4;                     // 网关ip
    repeated NetworkAddress address = 5;    // ipv4地址，
}

message NetworkAddress {
    string ip = 1;
    int32 mask = 2;
}

message MachineVolume {
    string name = 1;                    // 使用的卷名称，为空时自动创建一个卷
    string source = 2;                  // host内的路径，当路径为空时则自动在volume目录下创建一个卷
    string destination = 3;             // machine内的挂载路径
    bool readonly = 4;                  // 是否使用只读模式
}

// device:weight pair
message WeightDevice {
    string Path = 1;
    uint32 Weight = 2;
}

// device:rate_per_second pair
message ThrottleDevice {
    string Path = 1;
    uint64 Rate = 2;
}

// DeviceMapping 表示宿主机与容器之间 device 的映射
message DeviceMapping {
    string PathOnHost = 1;
    string PathInContainer = 2;
    string CgroupPermissions = 3;
}

message Resources {
    int64 CPUShares = 1; // CPU shares (与其他容器的相对权重)
    int64 Memory = 2;    // 内存限制 单位 bytes
    int64 NanoCPUs = 3;  //  CPU quota

    string CgroupParent = 4; // cgroup 的层级路径 可以为空
    uint32 BlkioWeight = 5;  // 相对于其他容器的 Blkio 权重

    repeated WeightDevice BlkioWeightDevice = 6;       // device:weight pairs
    repeated ThrottleDevice BlkioDeviceReadBps = 7;    // read 速率上限 单位 bytes
    repeated ThrottleDevice BlkioDeviceWriteBps = 8;   // write 速率上限 单位 bytes
    repeated ThrottleDevice BlkioDeviceReadIOps = 9;   // read 速率上限 以每秒 IO 为单位指定
    repeated ThrottleDevice BlkioDeviceWriteIOps = 10; // write 速率上限 以每秒 IO 为单位指定

    int64 CPUPeriod = 11;                // 给 hardcap 使用的 CPU 周期 单位微秒
    int64 CPUQuota = 12;                 // CPU hardcap limit 单位微秒, 在对给定的周期中允许的时间
    int64 CPURealtimePeriod = 13;        // 实时调度时间 单位微秒
    int64 CPURealtimeRuntime = 14;       // 被用来调度的实时 CPU 周期
    string CpusetCpus = 15;              // 在 cpuset 中使用的参数, 默认是可以访问任意 CPU
    string CpusetMems = 16;              // cpuset 中的内存节点列表。默认为使用任何可用的内存节点。
    repeated DeviceMapping Devices = 17; // 宿主机与容器 Devices 的映射列表
    int64 DiskQuota = 18;                // Disk limit 单位 bytes
    int64 KernelMemory = 19;             // Kernel memory limit 单位 bytes
    int64 KernelMemoryTCP = 20;          // 内核给使用 tcp 内存的限制 单位 byte
    int64 MemoryReservation = 21;        // Memory 软 limit 单位 bytes
    int64 MemorySwap = 22;               // memory + swap 的内存限制; -1 表示不限制
    int64 MemorySwappiness = 23;         // 用来调整容器内存交换的参数
    bool OomKillDisable = 24;            // 是否关闭 OOM kill
    int64 PidsLimit = 25;                // 容器 pid limit
}

message CommitMachineReq {
    string id = 1;
    string name = 2;
}

message CommitMachineResp {
    string id = 1;
    Error err = 2;
}